# bezier_curve

./: CMakeLists.txt  README.md  dialog.h  dialog.ui  main.cpp  qbeziercurvewidget.cpp  qbeziercurvewidget.h
